# CLaneS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: clanes.h  clanes_tg.h
include/level1/: level1.h  level1_tg.h
include/level2/: level2.h  level2_tg.h
include/level3/: level3.h  level3_tg.h
src/: clanes.c  clanes_internal.h
src/kernels/level1/dot/sdot/: sdot_avx512_fma_ker.h
src/level1/dot/: ddot.c  sdot.c
